--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ cabal.project.local~
 06-sum-square-difference/06-sum-square-difference
 07-10001st-prime/07-10001st-prime
 08-largest-product-in-a-series/08-largest-product-in-a-series
+09-special-pythagorean-triplet/09-special-pythagorean-triplet
