--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ cabal.project.local~
 07-10001st-prime/07-10001st-prime
 08-largest-product-in-a-series/08-largest-product-in-a-series
 09-special-pythagorean-triplet/09-special-pythagorean-triplet
+10-summation-of-primes/10-summation-of-primes
