--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ cabal.project.local~
 08-largest-product-in-a-series/08-largest-product-in-a-series
 09-special-pythagorean-triplet/09-special-pythagorean-triplet
 10-summation-of-primes/10-summation-of-primes
+11-largest-product-in-a-grid/11-largest-product-in-a-grid
