--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ cabal.project.local~
 09-special-pythagorean-triplet/09-special-pythagorean-triplet
 10-summation-of-primes/10-summation-of-primes
 11-largest-product-in-a-grid/11-largest-product-in-a-grid
+03-Largest-prime-factor/largest-prime-factor
