--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ cabal.project.local~
 10-summation-of-primes/10-summation-of-primes
 11-largest-product-in-a-grid/11-largest-product-in-a-grid
 03-Largest-prime-factor/largest-prime-factor
+03-Largest-prime-factor/largest-prime-factor
