--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ cabal.project.local~
 11-largest-product-in-a-grid/11-largest-product-in-a-grid
 03-Largest-prime-factor/largest-prime-factor
 03-Largest-prime-factor/largest-prime-factor
+03-Largest-prime-factor/largest-prime-factor
