--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ cabal.project.local~
 03-Largest-prime-factor/largest-prime-factor
 03-Largest-prime-factor/largest-prime-factor
 03-Largest-prime-factor/largest-prime-factor
+12-highly-divisible-triangular-number/12-highly-divisible-triangular-number
