--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ cabal.project.local~
 03-Largest-prime-factor/largest-prime-factor
 03-Largest-prime-factor/largest-prime-factor
 12-highly-divisible-triangular-number/12-highly-divisible-triangular-number
+13-large-sum/13-large-sum
